Fix fullscreen notes editor
It was partially hidden by header navbar

--- a/css/djlu.css
+++ b/css/djlu.css
@@ -400,3 +400,11 @@ table th.sort-up:after {
 #papers_modals .js_push_modal_status_content pre {
     max-height: 200px;
 }
+
+.editor-toolbar.fullscreen {
+    top: 50px !important;
+}
+
+.CodeMirror-fullscreen {
+    top: 100px !important;
+}
